--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: bcrm
 Type: Package
-Title: Bayesian continuous reasssessment method (CRM) designs for Phase
+Title: Bayesian continuous reassessment method (CRM) designs for Phase
         I dose-finding trials.
-Version: 0.1
-Date: 2012-01-10
-Author: Michael Sweeting <michael.sweeting@mrc-bsu.cam.ac.uk>
+Version: 0.2
+Date: 2012-02-09
+Author: Michael Sweeting
 Maintainer: Michael Sweeting <michael.sweeting@mrc-bsu.cam.ac.uk>
 Description: This package implements a wide variety of one and
         two-parameter Bayesian CRM designs. The program can run
@@ -13,8 +13,8 @@ Description: This package implements a wide variety of one and
         operating characteristics.
 License: GPL (>= 2)
 LazyLoad: yes
-Depends: mvtnorm, ggplot2
+Depends: mvtnorm, ggplot2, grid
 Suggests: R2WinBUGS, BRugs
-Packaged: 2012-01-10 15:26:19 UTC; michaels
+Packaged: 2012-02-09 15:16:02 UTC; michaels
 Repository: CRAN
-Date/Publication: 2012-01-11 13:19:38
+Date/Publication: 2012-02-09 15:59:39
