--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: bcrm
 Type: Package
 Title: Bayesian continuous reassessment method (CRM) designs for Phase
         I dose-finding trials.
-Version: 0.3
-Date: 2012-05-01
+Version: 0.4
+Date: 2012-09-18
 Author: Michael Sweeting
 Maintainer: Michael Sweeting <michael.sweeting@mrc-bsu.cam.ac.uk>
 Description: This package implements a wide variety of one and
@@ -13,8 +13,8 @@ Description: This package implements a wide variety of one and
         operating characteristics.
 License: GPL (>= 2)
 LazyLoad: yes
-Depends: mvtnorm, ggplot2, grid
+Depends: mvtnorm, ggplot2 (>= 0.9.2), grid
 Suggests: R2WinBUGS, BRugs
-Packaged: 2012-05-01 07:36:22 UTC; michaels
+Packaged: 2012-09-18 16:03:37 UTC; michaels
 Repository: CRAN
-Date/Publication: 2012-05-01 08:09:14
+Date/Publication: 2012-09-18 18:24:18
