--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: bcrm
 Type: Package
 Title: Bayesian continuous reassessment method (CRM) designs for Phase
         I dose-finding trials.
-Version: 0.4.1
-Date: 2012-10-24
+Version: 0.4.2
+Date: 2013-03-19
 Author: Michael Sweeting
 Maintainer: Michael Sweeting <michael.sweeting@mrc-bsu.cam.ac.uk>
 Description: This package implements a wide variety of one and
@@ -15,6 +15,7 @@ License: GPL (>= 2)
 LazyLoad: yes
 Depends: mvtnorm, ggplot2 (>= 0.9.2), grid
 Suggests: R2WinBUGS, BRugs
-Packaged: 2012-10-24 14:10:13 UTC; michaels
+Packaged: 2013-03-26 10:30:58 UTC; michaels
+NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2012-10-24 14:34:16
+Date/Publication: 2013-03-26 11:40:01
