--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,17 @@
 Package: bcrm
 Type: Package
-Title: Bayesian continual reassessment method (CRM) designs for Phase I
-        dose-finding trials.
-Version: 0.4.4
-Date: 2014-13-18
+Title: Bayesian Continual Reassessment Method for Phase I
+        Dose-Escalation Trials
+Version: 0.4.5
+Date: 2015-09-23
 Author: Michael Sweeting 
 Maintainer: Michael Sweeting <mjs212@medschl.cam.ac.uk>
-Description: This package implements a wide variety of one and two-parameter Bayesian CRM designs. The program can run interactively, allowing the user to enter outcomes after each cohort has been recruited, or via simulation to assess operating characteristics.
+Description: Implements a wide variety of one and two-parameter Bayesian CRM designs. The program can run interactively, allowing the user to enter outcomes after each cohort has been recruited, or via simulation to assess operating characteristics.
 License: GPL (>= 2)
 LazyLoad: yes
-Depends: mvtnorm, ggplot2 (>= 0.9.2), grid
+Imports: mvtnorm, ggplot2 (>= 0.9.2), grid
 Suggests: R2WinBUGS, BRugs, rjags
-Packaged: 2014-04-08 15:58:19 UTC; michaels
 NeedsCompilation: no
+Packaged: 2015-09-23 12:48:48 UTC; mjs212
 Repository: CRAN
-Date/Publication: 2014-04-08 18:59:37
+Date/Publication: 2015-09-24 01:23:12
