--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,8 +11,16 @@ threep3
 
 import(
 ggplot2,
-mvtnorm
+mvtnorm,
+grid
 )
+
+importFrom("grDevices", "dev.off", "pdf")
+importFrom("graphics", "hist", "lines", "par", "plot")
+importFrom("stats", "dbinom", "dgamma", "dlnorm", "dunif", "integrate",
+     "median", "optimize", "qlogis", "quantile", "rbinom",
+     "rgamma", "rlnorm", "runif", "update", "weighted.mean",
+     "xtabs")
 
 S3method(print, bcrm)
 S3method(print,bcrm.sim)
